<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seachange.healthandsafty.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="21dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/image_content"
                        android:src="@mipmap/logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/sea"
                        android:textColor="@color/tittleGrey"
                        android:textSize="32sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change"
                        android:textColor="@color/tittleGrey"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="top"
                        android:layout_marginTop="5dp"
                        android:text="TM"
                        android:textColor="@color/tittleGrey"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="21dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/form_mail"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="top"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:text="@string/fa_mail"
                        android:textColor="@color/formWhite"
                        android:textSize="30sp" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                        style="@style/Title"
                        android:id="@+id/email_text_box"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        app:errorColor="@color/errorColor"
                        app:labelText="Email"
                        app:panelBackgroundColor="#F9AF54"
                        app:primaryColor="@color/alertTitle"
                        app:secondaryColor="@color/formWhite"
                        app:helperText=" ">

                        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                            android:theme="@style/MyEditText"
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="40dp"
                            android:hint="@string/email_place_holder"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/alertContent"
                            android:textColorHint="@color/hideGrey"
                            android:textSize="16sp" />

                    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
                        <Button
                            android:id="@+id/clear_mail_button"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_alignParentEnd="true"
                            android:textColor="@color/formWhite"
                            android:textSize="30sp"
                            android:text="@string/fa_close_circle"
                            android:layout_marginTop="13dp" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="21dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/form_lock"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="top"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:text="@string/fa_lock"
                        android:textColor="@color/formWhite"
                        android:textSize="30sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                            android:id="@+id/password_text_box"
                            style="@style/Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="12dp"
                            android:layout_marginBottom="3dp"
                            app:errorColor="@color/errorColor"
                            app:helperText=" "
                            app:labelText="Password"
                            app:panelBackgroundColor="#F9AF54"
                            app:primaryColor="@color/alertTitle"
                            app:secondaryColor="@color/formWhite">


                            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                                android:id="@+id/password"
                                android:theme="@style/MyEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="40dp"
                                android:imeActionId="6"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/alertContent"
                                android:textColorHint="@color/formWhite"
                                android:textSize="16dp"/>

                        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                        <Button
                            android:id="@+id/login_show_button"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_alignParentEnd="true"
                            android:textColor="@color/formWhite"
                            android:textSize="30sp"
                            android:text="@string/fa_eye"
                            android:layout_marginTop="12dp" />

                    </RelativeLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="21dp"
                    android:backgroundTint="@color/colorDefaultGreen"
                    android:text="LOGIN"
                    android:textColor="@color/sysWhite"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/password_reset_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:text="@string/forgot_password" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transBlack"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:background="@drawable/round_corner_spinner_background">

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/login_avi"
                style="@style/AVLoadingIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible"
                app:indicatorColor="@color/colorDefaultYellow"
                app:indicatorName="BallPulseIndicator" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>