...
                    android:paddingTop="10dp"
                    android:text="@string/frequently_used"
                    android:textColor="@color/alertTitle"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hazard_source_recent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="7dp" />

                <RelativeLayout
...
                            android:text="1 selected "
                            android:textColor="@color/alertContent"
                            android:textSize="17sp" />


                        <Button
                            android:id="@+id/source_add_hazard"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="230dp"
                            android:layout_height="57dp"
                            android:layout_alignParentEnd="true"
                            android:gravity="center"
                            android:text="@string/add_hazard"
...
